--- a/home/styles.css
+++ b/home/styles.css
@@ -3,4 +3,5 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
     background-color: #CCA300;
+    background: #CCA300;
 }
